--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Imports GICS information about positions of given ETFs",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx ts-node index.ts"
   },
   "author": "Luis Ramer (Llois41)",
   "license": "ISC",
@@ -14,7 +15,10 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "cheerio": "^1.0.0-rc.10",
     "csv-parse": "^5.0.4",
-    "node-xlsx": "^0.21.0"
+    "node-xlsx": "^0.21.0",
+    "objects-to-csv": "^1.3.6"
   }
 }
